# engram

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  (+1 more)
companions/engram-importer/: Cargo.toml  README.md
companions/engram-importer/src/: main.rs
crates/engram-cli/: Cargo.toml
crates/engram-cli/src/: auth.rs  auth_bearer.rs  cli.rs  config.rs  http_client.rs  logging.rs  main.rs  process_guard.rs
crates/engram-cli/src/commands/: apply_shared.rs  audit_contamination.rs  auth.rs  auto_improve.rs  auto_improve_report.rs  backup.rs  bootstrap.rs  checkpoints.rs  commit.rs  curator.rs  data_purge.rs  delete_page.rs  embed.rs  finalize_session.rs  forget_sweep.rs  generate_auth_token.rs  hook.rs  hook_capture.rs  hook_drain_process.rs  hook_spool.rs  init.rs  install_hooks.rs  install_instructions.rs  install_mcp.rs  install_skills.rs  lint.rs  llm_test.rs  mod.rs  move_project.rs  openclaw_plugin.rs  path_util.rs  pending_writes.rs  purge_project.rs  read_page.rs  reindex.rs  rename_project.rs  render_shared.rs  reorg.rs  reset.rs  restore.rs  (+8 more)
crates/engram-cli/templates/: config.default.toml
crates/engram-cli/tests/: autoscope_env.rs  hook_drain.rs  removal.rs  routing_instructions.rs  routing_skills.rs
crates/engram-consolidate/: Cargo.toml
crates/engram-consolidate/prompts/: batch_consolidate_system.md  bootstrap_system.md  lint_system.md  single_consolidate_system.md
crates/engram-consolidate/src/: auto_improve.rs  auto_improve_telemetry.rs  bootstrap.rs  consolidator.rs  curator.rs  lib.rs  lint.rs  projection.rs  sweep.rs  types.rs
crates/engram-consolidate/tests/: embeddings.rs  lifecycle.rs  recall_eval.rs
crates/engram-core/: Cargo.toml
crates/engram-core/src/: active_project.rs  actor.rs  error.rs  handoff.rs  ids.rs  lib.rs  observation.rs  page.rs  routing_skills.rs  routing_snippet.rs  sanitize.rs  user.rs
crates/engram-core/src/routing_skills/engram-durable-pages/: SKILL.md
crates/engram-core/src/routing_skills/engram-handoff/: SKILL.md
crates/engram-core/src/routing_skills/engram-learning-maintenance/: SKILL.md
crates/engram-core/src/routing_skills/engram-retrieval/: SKILL.md
crates/engram-core/src/routing_skills/engram-routing-install/: SKILL.md
crates/engram-hooks/: Cargo.toml
crates/engram-hooks/src/: lib.rs  log.rs  payload.rs  router.rs  synth.rs
crates/engram-llm/: Cargo.toml
crates/engram-llm/src/: anthropic.rs  auth.rs  auth_file.rs  chunk.rs  copilot.rs  embedding.rs  error.rs  factory.rs  gemini.rs  google.rs  health.rs  lib.rs  oidc.rs  openai.rs  openai_compat.rs  openai_oauth.rs  opencode.rs  provider.rs  response.rs  text.rs  types.rs
crates/engram-llm/tests/: openai_compat_strict.rs
crates/engram-mcp/: Cargo.toml
crates/engram-mcp/prompts/: explore_system.md
crates/engram-mcp/src/: actor.rs  admin.rs  lib.rs  server.rs
crates/engram-mcp/tests/: admin_backup.rs  admin_bootstrap.rs  admin_move.rs  admin_phase3.rs  admin_purge.rs  admin_read_page.rs  admin_rename.rs  admin_status_search.rs  admin_write_page.rs  autoscope_multiuser.rs  autoscope_stress.rs  mcp_stateless_http.rs
crates/engram-store/: Cargo.toml
crates/engram-store/migrations/: V01__init.sql  V02__handoffs.sql  V03__decay.sql  V04__embeddings.sql  V05__cascade_indexes.sql  V06__wiki_migrations.sql  V07__observations_fts_and_link_index.sql  V08__performance_indexes.sql  V09__sessions_supported_agent_kinds.sql  V100__pages_fts_cjk_trigram.sql  V101__page_embeddings_chunks.sql  V10__observation_extension_events.sql  V11__sessions_antigravity_agent_kind.sql  V12__fts_remove_diacritics.sql  V13__cross_project_links.sql  V14__users.sql  V15__pages_author_id.sql  V16__audit_log_author_id.sql  V17__pages_fts_index_path.sql  V18__enforce_project_workspace_pairing.sql  V19__repair_orphan_observation_attribution.sql  V20__sessions_grok_agent_kind.sql  V21__auto_improve_pending_proposals.sql  V22__auto_improve_scheduler.sql  V23__auto_improve_patch_proposals.sql  V24__auto_improve_rejections.sql  V25__sessions_pi_agent_kind.sql  V27__repair_nongit_fragment_attribution.sql
crates/engram-store/src/: auto_improve.rs  decay.rs  error.rs  fts_query.rs  lib.rs  migrations.rs  ops.rs  reader.rs  scope.rs  users.rs  writer.rs
crates/engram-store/tests/: audit_contamination.rs
crates/engram-web/: Cargo.toml  build.rs  tailwind.config.js
crates/engram-web/src/: lib.rs  markdown.rs  state.rs  templates.rs
crates/engram-web/src/routes/: api.rs  index.rs  mod.rs  page.rs  project.rs  search.rs  statics.rs
crates/engram-web/static/: tailwind.css
crates/engram-web/templates/: base.html  not_found.html  page.html  project.html  projects.html  search.html
crates/engram-web/tests/: routes.rs
crates/engram-wiki/: Cargo.toml
crates/engram-wiki/src/: admission.rs  atomic.rs  error.rs  git.rs  lib.rs  markdown.rs  watcher.rs  wiki.rs
crates/engram-wiki/src/migrations/: mod.rs  runner.rs
crates/engram-wiki/tests/: admission.rs
docs/: ARCHITECTURE.md  admission-webhooks.md  auto-improve-eval-gates.md  auto-improve-skillopt-roadmap.md  auto-improvement-loop.md  auto-scope.md  companion-crates.md  design-decisions.md  frontend-api.md  https-via-proxy.md  install.md  issues-agentmemory.md  issues-basic-memory.md  issues-cognee.md  issues-mempalace.md  lifecycle-ops.md  llm-provider-comparison.md  macos.md  marker-file.md  mcp-install.md  migrate-from-ai-memory.md  prior-art-implementation-findings.md  research-agentmemory.md  research-basic-memory.md  research-cognee.md  research-karpathy-llm-wiki.md  upstream-changelog.md  usage.md  users.md  v0.3-roadmap.md  vector-backend-policy.md  wiki-migrations.md  windows.md
evals/: Cargo.toml  README.md
evals/fixtures/: 01-rust-bug-fix.json  02-architecture-decision.json  03-gotcha-with-rule.json  04-low-signal-session.json  05-multi-topic-session.json
evals/src/: main.rs
hooks/: _lib.sh
scripts/: install-hooks.sh  migrate-from-ai-memory.sh
(+133 files in other folders)
