[package]
name = "engram-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core domain types and errors for engram."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
jiff.workspace = true
regex.workspace = true
tracing.workspace = true
# JsonSchema on Tier/PageKind so the consolidation prompt's
# structured-output schema enforces enum membership instead of
# producing `{ "type": "string" }` with no constraints (which lets
# the model invent integer tier values).
schemars.workspace = true

[dev-dependencies]
serde_yaml.workspace = true

[lints]
workspace = true
