[package]
name = "engram-hooks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hook payload schemas, sanitisation, and HTTP ingress for agent lifecycle hooks."

[dependencies]
engram-core.workspace = true
engram-store.workspace = true
engram-wiki.workspace = true
engram-consolidate.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# Parse the per-event `?event=…` query of each spooled URL in `/hook/batch`,
# the same crate (and version) axum's `Query` extractor uses for `/hook`.
serde_urlencoded = "0.7"
tokio.workspace = true
tracing.workspace = true
jiff.workspace = true
uuid.workspace = true
axum.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
git2.workspace = true

[lints]
workspace = true
