[package]
name = "engram-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP server transport and tool router for engram."

[dependencies]
engram-core.workspace = true
engram-consolidate.workspace = true
engram-llm.workspace = true
engram-store.workspace = true
engram-wiki.workspace = true
anyhow.workspace = true
thiserror.workspace = true
flate2.workspace = true
tar.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
rmcp.workspace = true
schemars.workspace = true
axum.workspace = true
# Time gap calculation for `memory_explore` (parse stored ISO-8601
# timestamps + delta against now). The rest of the crate doesn't
# need a clock dep.
jiff.workspace = true

[dev-dependencies]
engram-core.workspace = true
engram-hooks.workspace = true
engram-store.workspace = true
engram-wiki.workspace = true
async-trait.workspace = true
flate2.workspace = true
tar.workspace = true
tower.workspace = true

[lints]
workspace = true
