[package]
name = "engram-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SQLite storage layer with single-writer actor, FTS5 indices, and brute-force vector scoring."

[dependencies]
engram-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
jiff.workspace = true
uuid.workspace = true
sha2.workspace = true
# Token generation + comparison primitives for the users table.
# `getrandom` reads OS CSPRNG bytes; `base64` URL-encodes the
# generated token for safe transport; `subtle` provides
# constant-time slice equality for the hash compare in the
# auth hot path.
getrandom.workspace = true
base64.workspace = true
subtle.workspace = true
rusqlite.workspace = true
refinery.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
