[package]
name = "engram-wiki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Markdown wiki read/write, file watcher and git versioning."

[dependencies]
engram-core.workspace = true
engram-llm.workspace = true
engram-store.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
jiff.workspace = true
tracing.workspace = true
tokio.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
git2.workspace = true
async-trait.workspace = true
# Admission webhook chain (sync HTTP calls before page persistence).
reqwest.workspace = true
futures-util.workspace = true

[target.'cfg(windows)'.dependencies]
winapi-util = { workspace = true }

[dev-dependencies]
# Mock HTTP server for admission chain integration tests.
axum.workspace = true
tower.workspace = true

[lints]
workspace = true
